[gd_scene load_steps=13 format=3 uid="uid://cmwb81du1kbtm"]

[ext_resource type="Script" path="res://game/menus/lobby/lobby.gd" id="1_jtfrr"]
[ext_resource type="Texture2D" uid="uid://cp68q5xemqd01" path="res://game/menus/lobby/icons/play.png" id="2_6xr3g"]
[ext_resource type="Texture2D" uid="uid://nyuii0fx273c" path="res://game/menus/lobby/background.png" id="2_8bvc3"]
[ext_resource type="Texture2D" uid="uid://d14nbphg5o3a" path="res://game/events/common/chat/chat.png" id="2_wjeu5"]
[ext_resource type="Script" path="res://game/events/common/chat/chat.gd" id="3_amd3n"]
[ext_resource type="Texture2D" uid="uid://durmmh0vjl0eg" path="res://menu/theme/icons/exit.png" id="3_cwg7d"]
[ext_resource type="Texture2D" uid="uid://ccyn16fdlha6p" path="res://game/menus/lobby/icons/change_event.png" id="3_pddfd"]
[ext_resource type="Texture2D" uid="uid://eyfsi3j0o04s" path="res://game/menus/lobby/icons/change_map.png" id="4_4kry5"]
[ext_resource type="Texture2D" uid="uid://dwtddg0cmagg1" path="res://game/events/common/chat/chat_send.png" id="4_6keib"]
[ext_resource type="Script" path="res://game/menus/lobby/view_ip_dialog.gd" id="5_jyb4t"]
[ext_resource type="Texture2D" uid="uid://c3r13t5eig25e" path="res://game/menus/lobby/icons/view_ips.png" id="7_f0cv5"]
[ext_resource type="Script" path="res://menu/item_grid/items_grid.gd" id="11_ncktp"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtfrr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.768627, 0.768627, 0.768627, 1)

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -360.0
offset_right = 800.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8bvc3")

[node name="Panels" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -211.0
offset_right = 406.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lobby" type="PanelContainer" parent="Panels"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panels/Lobby"]
auto_translate_mode = 1
layout_mode = 2

[node name="Title" type="Label" parent="Panels/Lobby/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderMedium"
text = "Игроки в комнате:"

[node name="Panel" type="PanelContainer" parent="Panels/Lobby/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="PlayersContainer" type="GridContainer" parent="Panels/Lobby/VBoxContainer/Panel"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
columns = 2

[node name="Environment" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Event" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Environment"]
unique_name_in_owner = true
auto_translate_mode = 1
self_modulate = Color(0.752941, 0.752941, 0.752941, 1)
custom_minimum_size = Vector2(392, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="Panels/Lobby/VBoxContainer/Environment/Event"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Event/Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Event/Container"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1
vertical_alignment = 2

[node name="Map" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Environment"]
unique_name_in_owner = true
self_modulate = Color(0.752941, 0.752941, 0.752941, 1)
custom_minimum_size = Vector2(392, 80)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1

[node name="Container" type="VBoxContainer" parent="Panels/Lobby/VBoxContainer/Environment/Map"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Map/Container"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Map/Container"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1
vertical_alignment = 2

[node name="Player" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Skin" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Скин"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSkin" type="Button" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="LightWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Лёгкое оружие"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeLightWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="HeavyWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Тяжёлое оружие"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeHeavyWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
auto_translate_mode = 1
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SupportWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Оружие поддержки"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSupportWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="MeleeWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Ближнее оружие"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeMeleeWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Skill" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Навык"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
auto_translate_mode = 1
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSkin" type="Button" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ClientHint" type="Label" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Начать игру может только хост."
horizontal_alignment = 1

[node name="AdminPanel" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="StartEvent" type="Button" parent="Panels/Lobby/VBoxContainer/AdminPanel"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Начать!"
icon = ExtResource("2_6xr3g")

[node name="ChangeEvent" type="Button" parent="Panels/Lobby/VBoxContainer/AdminPanel"]
layout_mode = 2
text = "Сменить событие..."
icon = ExtResource("3_pddfd")

[node name="ChangeMap" type="Button" parent="Panels/Lobby/VBoxContainer/AdminPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Сменить карту..."
icon = ExtResource("4_4kry5")

[node name="ControlButtons" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Chat" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
icon = ExtResource("2_wjeu5")

[node name="ConnectedToIP" type="LinkButton" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.125, 0.125, 0.125, 1)
theme_override_colors/font_hover_color = Color(0.105469, 0.105469, 0.105469, 1)
theme_override_colors/font_hover_pressed_color = Color(0.167969, 0.167969, 0.167969, 1)
text = "Подключён к "
underline = 1

[node name="ViewIPs" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
text = "Просмотреть IP-адреса..."
icon = ExtResource("7_f0cv5")

[node name="Leave" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Выйти"
icon = ExtResource("3_cwg7d")

[node name="Chat" type="PanelContainer" parent="Panels"]
auto_translate_mode = 2
visible = false
self_modulate = Color(1, 1, 1, 0.878431)
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
script = ExtResource("3_amd3n")
chat_button_path = NodePath("../Lobby/VBoxContainer/ControlButtons/Chat")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panels/Chat"]
auto_translate_mode = 1
layout_mode = 2

[node name="Messages" type="RichTextLabel" parent="Panels/Chat/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panels/Chat/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Panels/Chat/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Сообщение..."
max_length = 80
context_menu_enabled = false

[node name="Send" type="TextureButton" parent="Panels/Chat/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture_normal = ExtResource("4_6keib")
ignore_texture_size = true
stretch_mode = 4

[node name="ItemSelector" type="Window" parent="."]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(408, 440)
visible = false
unresizable = true
popup_window = true
min_size = Vector2i(360, 360)

[node name="Background" type="ColorRect" parent="ItemSelector"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSelector"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ItemSelector/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemsGrid" type="GridContainer" parent="ItemSelector/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3
script = ExtResource("11_ncktp")

[node name="ViewIPDialog" type="AcceptDialog" parent="."]
title = "Ваши IP-адреса"
initial_position = 2
size = Vector2i(640, 160)
exclusive = false
unresizable = true
popup_window = true
dialog_autowrap = true
script = ExtResource("5_jyb4t")

[node name="HTTPRequest" type="HTTPRequest" parent="ViewIPDialog"]
timeout = 5.0

[node name="UDPTimer" type="Timer" parent="."]

[node name="UpdateIPSTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/Skin/ChangeSkin" to="." method="_on_change_skin_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/LightWeapon/ChangeLightWeapon" to="." method="_on_change_light_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/HeavyWeapon/ChangeHeavyWeapon" to="." method="_on_change_heavy_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/SupportWeapon/ChangeSupportWeapon" to="." method="_on_change_support_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/MeleeWeapon/ChangeMeleeWeapon" to="." method="_on_change_melee_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/Skill/ChangeSkin" to="." method="_on_change_skill_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/AdminPanel/StartEvent" to="." method="_on_start_event_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/AdminPanel/ChangeEvent" to="." method="_on_change_event_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/AdminPanel/ChangeMap" to="." method="_on_change_map_pressed"]
[connection signal="toggled" from="Panels/Lobby/VBoxContainer/ControlButtons/Chat" to="Panels/Chat" method="_on_chat_toggled"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/ConnectedToIP" to="." method="_on_connected_to_ip_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/ViewIPs" to="ViewIPDialog" method="_show"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/Leave" to="." method="_on_leave_pressed"]
[connection signal="text_submitted" from="Panels/Chat/VBoxContainer/HBoxContainer/LineEdit" to="Panels/Chat" method="send_message" unbinds=1]
[connection signal="pressed" from="Panels/Chat/VBoxContainer/HBoxContainer/Send" to="Panels/Chat" method="send_message"]
[connection signal="close_requested" from="ItemSelector" to="ItemSelector" method="hide"]
[connection signal="item_selected" from="ItemSelector/ScrollContainer/MarginContainer/ItemsGrid" to="." method="_on_item_selected"]
[connection signal="custom_action" from="ViewIPDialog" to="ViewIPDialog" method="_on_custom_action"]
[connection signal="request_completed" from="ViewIPDialog/HTTPRequest" to="ViewIPDialog" method="_on_request_completed"]
[connection signal="timeout" from="UDPTimer" to="." method="_do_broadcast"]
[connection signal="timeout" from="UpdateIPSTimer" to="." method="_find_ips_for_broadcast"]
